[package]
name = "demangler-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = "0.3.60"
wasm-bindgen = "0.2"
gloo-console = "0.2.3"

regex = "1"
lazy_static = "1.4.0"
cpp_demangle = "0.3.5"
msvc-demangler = "0.9.0"